--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,13 @@
 version: "3.9"
-
 services:
   web:
-    build:
-      context: .
-      dockerfile: Dockerfile-dev        # swap to Dockerfile for production
-    command: python run.py              # run the SocketIO server
-    ports:
-      - "8080:8080"                     # hostPort:containerPort
-    volumes:
-      - .:/code                         # live-reload on file changes
-    environment:
-      - FLASK_DEBUG=1                   # auto-reload inside run.py
+    build: .
+    env_file: .env.prod
+    depends_on: [redis]
+  redis:
+    image: redis:7-alpine
+  nginx:
+    image: nginx:alpine
+    ports: ["80:80", "443:443"]
+    volumes: ["./deploy/nginx.conf:/etc/nginx/conf.d/default.conf"]
+    depends_on: [web]
