--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   web:
     build: .
-    env_file: .env.prod
+    env_file: .env
     depends_on: [redis]
   redis:
     image: redis:7-alpine
