--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,26 @@ services:
   web:
     build: .
     env_file: .env
-    depends_on: [redis]
+    depends_on: [db, redis]
+    ports:
+      - "8000:8000"
+    command: >
+      gunicorn -k gevent -w 2 -b 0.0.0.0:8000 wsgi:app
+
+  db:
+    image: postgres:16-alpine
+    restart: always
+    environment:
+      POSTGRES_USER: eds
+      POSTGRES_PASSWORD: ${PG_PASSWORD}
+      POSTGRES_DB: eds
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
   redis:
     image: redis:7-alpine
-  nginx:
-    image: nginx:alpine
-    ports: ["80:80", "443:443"]
-    volumes: ["./deploy/nginx.conf:/etc/nginx/conf.d/default.conf"]
-    depends_on: [web]
+    restart: always
+
+volumes:
+    pgdata:
+
