--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ Flask-WTF~=1.2
 Flask-SQLAlchemy~=3.1
 Flask-Migrate~=4.0
 argon2-cffi
-Flask-Mail>=0.9      # or Flask-Mail
+Flask-Mail>=0.9
 pyotp~=2.9
 Authlib[client]>=1.3
 python-dotenv
