--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,9 @@ Flask-WTF~=1.2
 Flask-SQLAlchemy~=3.1
 Flask-Migrate~=4.0
 argon2-cffi
-Flask-Mail>=0.9
+flask-Mail>=0.9
+sendgrid==6.11.0
+python-http-client==3.3.7
 pyotp~=2.9
 Authlib[client]>=1.3
 python-dotenv
