--- a/.env
+++ b/.env
@@ -12,4 +12,4 @@ MAIL_USE_SSL=true
 MAIL_USERNAME=no-reply@elitedatingsearch.com
 MAIL_PASSWORD=95TWEYdJqUkQ
 MAIL_DEFAULT_SENDER="Elite Dating Search <no-reply@elitedatingsearch.com>"
-SENDGRID_API_KEY="SG.kY8ssk1hT4Ou1V1aXWyzPQ.r3NlvCaGFACgdjikhhcxlEkVyIZiVyIZihGcvEdhhDenAMvs"
+SENDGRID_API_KEY=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
