added nginx logs

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,7 +11,7 @@ http {
     tcp_nopush      on;
     tcp_nodelay     on;
     keepalive_timeout  65;
-
+    
     # ---------- Compression ----------
     gzip  on;
     gzip_comp_level 5;
@@ -20,6 +20,12 @@ http {
         text/plain text/css text/xml
         text/javascript application/javascript
         application/json font/woff2 image/svg+xml;
+        
+    log_format timings '$remote_addr "$request" '
+                       '$status $body_bytes_sent '
+                       'rt=$request_time urt=$upstream_response_time';
 
+    access_log  /var/log/nginx/access.log  timings;
+    
     include /etc/nginx/conf.d/*.conf;
 }
