--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,3 +37,8 @@ services:
 
 volumes:
     pgdata:
+
+command: >
+  gunicorn -k gevent -w 4 --worker-connections 1000
+           --max-requests 1000 --max-requests-jitter 100
+           -b 0.0.0.0:8000 wsgi:app
