--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,14 @@
 services:
   web:
     build: .
+    command: >-
+      gunicorn -k gevent -w 4 --worker-connections 1000
+      --max-requests 1000 --max-requests-jitter 100
+      -b 0.0.0.0:8000 wsgi:app
     env_file: .env
     depends_on: [db, redis]
     ports:
       - "8000:8000"
-    command: >
-      gunicorn -k gevent -w 2 -b 0.0.0.0:8000 wsgi:app
 
   db:
     image: postgres:16-alpine
@@ -37,8 +39,3 @@ services:
 
 volumes:
     pgdata:
-
-command: >
-  gunicorn -k gevent -w 4 --worker-connections 1000
-           --max-requests 1000 --max-requests-jitter 100
-           -b 0.0.0.0:8000 wsgi:app
