added socket.io location

--- a/nginx/vhost.conf
+++ b/nginx/vhost.conf
@@ -21,7 +21,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/elitedatingsearch.com/privkey.pem;
     include             /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam         /etc/letsencrypt/ssl-dhparams.pem;
-
+    
     # -------------------------------------------------
     #  STATIC FILES  →  served straight from Nginx
     # -------------------------------------------------
@@ -32,26 +32,41 @@ server {
         expires       1y;
         add_header    Cache-Control "public, immutable";
     }
-
+    
     # tiny single-file helpers
     location = /favicon.ico { try_files /static/favicon.ico =404; access_log off; }
     location = /robots.txt  { try_files /static/robots.txt  =404; access_log off; }
-
+    
     # -------------------------------------------------
     #  Everything else → Flask (Gunicorn) container
     # -------------------------------------------------
     location / {
         proxy_pass              http://web:8000;
-
+    
         # pass along original info
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
         proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
-
+    
         # small response buffering (improves throughput)
         proxy_buffering          on;
         proxy_buffers            8 16k;
         proxy_busy_buffers_size  32k;
+    }
+    
+    location /socket.io/ {
+        proxy_pass              http://web:8000;
+
+        # WebSocket magical headers
+        proxy_http_version      1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        # Preserve client info
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
     }
 }
