added dedicated SOCKETIO_REDIS

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ SQLALCHEMY_DATABASE_URI_DEV=postgresql+psycopg://eds:eds0204@localhost:5432/eds
 SQLALCHEMY_DATABASE_URI_PROD=postgresql+psycopg://eds:${PG_PASSWORD}@db:5432/eds
 REDIS_URL=redis://redis:6379/0
 LIMITER_STORAGE_URI=redis://redis:6379/0
+SOCKETIO_REDIS=${REDIS_URL}
 MAIL_SERVER=smtp.zoho.com
 MAIL_PORT=465
 MAIL_USE_TLS=false
