setting temp web concurrency to 1 worker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     depends_on: [db, redis]
     environment:
       - REDIS_URL=redis://redis:6379/0
+      - WEB_CONCURRENCY=1
     ports:
       - "8000:8000"
 
