--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   web:
     build: .
     command: >
-      gunicorn -k gevent -w 4 --worker-connections 1000
+      gunicorn -k gevent -w ${WEB_CONCURRENCY:-1} --worker-connections 1000
               --timeout 90 --keep-alive 5
               -b 0.0.0.0:8000 wsgi:app
     env_file: .env
