--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,22 @@
 # version: 3.9
+
 services:
   web:
     build: .
     command: >
       gunicorn -k gevent -w ${WEB_CONCURRENCY:-1} --worker-connections 1000
-              --timeout 90 --keep-alive 5
-              -b 0.0.0.0:8000 wsgi:app
-    env_file: .env
-    depends_on: [db, redis]
+               --timeout 90 --keep-alive 5
+               -b 0.0.0.0:8000 wsgi:app
+    env_file:
+      - .env
+      - .env.prod
     environment:
-      - REDIS_URL=redis://redis:6379/0
-      - WEB_CONCURRENCY=1
+      DATABASE_URL: /run/secrets/pg_password
+      REDIS_URL: redis://redis:6379/0
+      WEB_CONCURRENCY: 1
+    depends_on: [db, redis]
+    secrets:
+      - pg_password
     ports:
       - "8000:8000"
 
@@ -19,10 +25,12 @@ services:
     restart: always
     environment:
       POSTGRES_USER: eds
-      POSTGRES_PASSWORD: ${PG_PASSWORD}
+      POSTGRES_PASSWORD_FILE: /run/secrets/pg_password
       POSTGRES_DB: eds
     volumes:
       - pgdata:/var/lib/postgresql/data
+    secrets:
+      - pg_password
 
   redis:
     image: redis:7-alpine
@@ -30,6 +38,7 @@ services:
 
   nginx:
     image: nginx:1.27-alpine
+    depends_on: [web]
     ports:
       - "80:80"
       - "443:443"
@@ -38,8 +47,10 @@ services:
       - ./nginx/vhost.conf:/etc/nginx/conf.d/default.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - ./app/static:/app/static:ro
-    depends_on:
-      - web
+
+secrets:
+  pg_password:
+    file: ./docker-secrets/pg_password.txt
 
 volumes:
-    pgdata:
+  pgdata:
